src/objects/Pill__c.object
<CustomObject>
    <fields>
        <fullName>Is_This_My_Pill__c</fullName>
        <formula>IF( My_Prescription__c &lt;&gt; NULL, IMAGE(&quot;/resource/greenCircle&quot;, &quot;Your Pill&quot;, 25,25), IMAGE(&quot;/resource/redCircle&quot;, &quot;NOT Your Pill&quot;, 25,25))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is This My Pill?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>My_Prescription__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>My Prescription?</label>
        <referenceTo>My_Prescription__c</referenceTo>
        <relationshipLabel>Pills Identifier</relationshipLabel>
        <relationshipName>Pills_Identifier</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Predicted_Drug_Name__c</fullName>
        <label>Predicted Drug Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Ethinylestradiol</fullName>
                </value>
                <value>
                    <fullName>Lorazepam</fullName>
                </value>
                <value>
                    <fullName>Oxybutynin</fullName>
                </value>
                <value>
                    <fullName>NOT AVAILABLE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Unique_Flow_Identifier__c</fullName>
        <label>Unique Flow Identifier</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <label>Pill Identifier</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Is_This_My_Pill__c</columns>
        <columns>My_Prescription__c</columns>
        <columns>Predicted_Drug_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>P-{000000}</displayFormat>
        <label>Pill Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pills Identifier</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>